--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <p><a href="http://code.jbarker.com/">&larr; code.jbarker.com</a></p>
         <h1>groovy-tictactoe</h1>
         <p>The game Tic-Tac-Toe (Noughts &amp; Crosses) written in Groovy.</p>
         <p class="view"><a href="https://github.com/jbarker/groovy-tictactoe">View the Project on GitHub <small>jbarker/groovy-tictactoe</small></a></p>
@@ -98,11 +99,24 @@ board.</p>
 </ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/jbarker">jbarker</a></p>
+        <p>This project is maintained by <a href="http://code.jbarker.com/">jbarker</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
+<!-- Piwik -->
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://www.jbarker.com/analytics/" : "http://www.jbarker.com/analytics/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try {
+var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 7);
+piwikTracker.trackPageView();
+piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://www.jbarker.com/analytics/piwik.php?idsite=7" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Tracking Code -->
+
   </body>
 </html>
