--- a/index.html
+++ b/index.html
@@ -85,18 +85,25 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 1.8.6</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.0.6</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 1.0-rc-3</li>
+<a href="http://www.gradle.org/">Gradle</a> 1.3</li>
 <li>
-<a href="http://junit.org/">JUnit</a> 4.10</li>
-</ul><h2>Release History</h2>
+<a href="http://junit.org/">JUnit</a> 4.11</li>
+</ul>
+
+<h2>Release History</h2>
+
+<p>0.9.1 - 05 January 2013</p>
+<ul>
+<li>Upgraded dependencies.</li>
+</ul>
 
 <p>0.9.0 - 14 May 2012</p>
-
 <ul>
 <li>Initial version.</li>
 </ul>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="http://code.jbarker.com/">jbarker</a></p>
