--- a/index.html
+++ b/index.html
@@ -85,14 +85,19 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.0.6</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.1.1</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 1.3</li>
+<a href="http://www.gradle.org/">Gradle</a> 1.4</li>
 <li>
 <a href="http://junit.org/">JUnit</a> 4.11</li>
 </ul>
 
 <h2>Release History</h2>
+
+<p>0.9.2 - 20 March 2013</p>
+<ul>
+<li>Upgraded dependencies.</li>
+</ul>
 
 <p>0.9.1 - 05 January 2013</p>
 <ul>
