--- a/index.html
+++ b/index.html
@@ -85,14 +85,19 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.1.3</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.1.5</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 1.5</li>
+<a href="http://www.gradle.org/">Gradle</a> 1.6</li>
 <li>
 <a href="http://junit.org/">JUnit</a> 4.11</li>
 </ul>
 
 <h2>Release History</h2>
+
+<p>0.9.4 - 29 June 2013</p>
+<ul>
+<li>Upgraded dependencies.</li>
+</ul>
 
 <p>0.9.3 - 04 May 2013</p>
 <ul>
