--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.1.5</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.1.6</li>
 <li>
 <a href="http://www.gradle.org/">Gradle</a> 1.6</li>
 <li>
@@ -93,6 +93,11 @@ board.</p>
 </ul>
 
 <h2>Release History</h2>
+
+<p>0.9.5 - 31 July 2013</p>
+<ul>
+<li>Upgraded dependencies.</li>
+</ul>
 
 <p>0.9.4 - 29 June 2013</p>
 <ul>
