--- a/index.html
+++ b/index.html
@@ -85,14 +85,19 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.1.8</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.2.0</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 1.8</li>
+<a href="http://www.gradle.org/">Gradle</a> 1.9</li>
 <li>
 <a href="http://junit.org/">JUnit</a> 4.11</li>
 </ul>
 
 <h2>Release History</h2>
+
+<p>0.9.7 - 24 November 2013</p>
+<ul>
+<li>Upgraded dependencies.</li>
+</ul>
 
 <p>0.9.6 - 19 October 2013</p>
 <ul>
