--- a/index.html
+++ b/index.html
@@ -85,46 +85,21 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.2.0</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.2.1</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 1.9</li>
+<a href="http://www.gradle.org/">Gradle</a> 1.10</li>
 <li>
 <a href="http://junit.org/">JUnit</a> 4.11</li>
 </ul>
 
 <h2>Release History</h2>
 
-<p>0.9.7 - 24 November 2013</p>
+<p>0.9.8 - 14 January 2014</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
 
-<p>0.9.6 - 19 October 2013</p>
-<ul>
-<li>Upgraded dependencies.</li>
-</ul>
-
-<p>0.9.5 - 31 July 2013</p>
-<ul>
-<li>Upgraded dependencies.</li>
-</ul>
-
-<p>0.9.4 - 29 June 2013</p>
-<ul>
-<li>Upgraded dependencies.</li>
-</ul>
-
-<p>0.9.3 - 04 May 2013</p>
-<ul>
-<li>Upgraded dependencies.</li>
-</ul>
-
-<p>0.9.2 - 20 March 2013</p>
-<ul>
-<li>Upgraded dependencies.</li>
-</ul>
-
-<p>0.9.1 - 05 January 2013</p>
+<p>0.9.1 &ndash; 0.9.7</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
