Added status image and link for Travis CI.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
 <p>The game Tic-Tac-Toe (Noughts &amp; Crosses) written in Groovy.</p>
 
+<p><a href="https://travis-ci.org/jbarker/groovy-tictactoe"><img
+src="https://travis-ci.org/jbarker/groovy-tictactoe.png?branch=master"
+alt="Build Status"></a></p>
+
+
 <h2>Highlights</h2>
 
 <ul>
