--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.3.2</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.3.3</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 1.12</li>
+<a href="http://www.gradle.org/">Gradle</a> 2.0</li>
 <li>
 <a href="http://junit.org/">JUnit</a> 4.11</li>
 </ul>
 
 <h2>Release History</h2>
 
-<p>0.9.11 - 01 June 2014</p>
+<p>0.9.12 - 06 Jul7 2014</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
 
-<p>0.9.1 &ndash; 0.9.10</p>
+<p>0.9.1 &ndash; 0.9.11</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
