--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.3.3</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.3.6</li>
 <li>
 <a href="http://www.gradle.org/">Gradle</a> 2.0</li>
 <li>
@@ -99,12 +99,12 @@ board.</p>
 
 <h2>Release History</h2>
 
-<p>0.9.12 - 06 Jul7 2014</p>
+<p>0.9.13 - 30 August 2014</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
 
-<p>0.9.1 &ndash; 0.9.11</p>
+<p>0.9.1 &ndash; 0.9.12</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
