--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@ board.</p>
 <li>
 <a href="http://groovy.codehaus.org/">Groovy</a> 2.3.7</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 2.1</li>
+<a href="http://www.gradle.org/">Gradle</a> 2.2.1</li>
 <li>
-<a href="http://junit.org/">JUnit</a> 4.11</li>
+<a href="http://junit.org/">JUnit</a> 4.12-beta-3</li>
 </ul>
 
 <h2>Release History</h2>
 
-<p>0.9.14 - 26 October 2014</p>
+<p>0.9.15 - 01 December 2014</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
 
-<p>0.9.1 &ndash; 0.9.13</p>
+<p>0.9.1 &ndash; 0.9.14</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
