--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.3.7</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.4.1</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 2.2.1</li>
+<a href="http://www.gradle.org/">Gradle</a> 2.3</li>
 <li>
-<a href="http://junit.org/">JUnit</a> 4.12-beta-3</li>
+<a href="http://junit.org/">JUnit</a> 4.12</li>
 </ul>
 
 <h2>Release History</h2>
 
-<p>0.9.15 - 01 December 2014</p>
+<p>0.9.16 - 07 March 2015</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
 
-<p>0.9.1 &ndash; 0.9.14</p>
+<p>0.9.1 &ndash; 0.9.15</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
