--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ alt="Build Status"></a></p>
 <p>In your favorite shell, set your working directory to the project root and
 build TicTacToe with <code>gradle</code>:</p>
 
-<pre><code>$ gradle clean build uberjar
+<pre><code>$ gradle clean build uberjar --daemon
 </code></pre>
 
 <h2>Running</h2>
@@ -90,21 +90,21 @@ board.</p>
 
 <ul>
 <li>
-<a href="http://groovy.codehaus.org/">Groovy</a> 2.4.3</li>
+<a href="http://groovy.codehaus.org/">Groovy</a> 2.4.4</li>
 <li>
-<a href="http://www.gradle.org/">Gradle</a> 2.4</li>
+<a href="http://www.gradle.org/">Gradle</a> 2.5</li>
 <li>
 <a href="http://junit.org/">JUnit</a> 4.12</li>
 </ul>
 
 <h2>Release History</h2>
 
-<p>0.9.17 - 17 May 2015</p>
+<p>0.9.18 - 19 July 2015</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
 
-<p>0.9.1 &ndash; 0.9.16</p>
+<p>0.9.1 &ndash; 0.9.17</p>
 <ul>
 <li>Upgraded dependencies.</li>
 </ul>
